added some recipes

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <h1>LASAGNA</h1>
+    <img src="lasagna.jpg" alt="lasagna">
+    <h3>Description</h3>
+    <ul>
+        <li>salt</li>
+        <li>pepper</li>
+    </ul>
+    <ol>
+        <li>add salt</li>
+        <li>add pepper</li>
+        <li>eat</li>
+    </ol>
 </body>
 </html>
