finished spaghetti recipe

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -8,5 +8,18 @@
 </head>
 <body>
     <h1>SPAGHETTI</h1>
+    <img src="spaghetti.jpg">
+    <ul>
+        <li>pasta</li>
+        <li>meat</li>
+        <li>sauce</li>
+    </ul>
+    <ol>
+        <li>boil pasta</li>
+        <li>boil sauce</li>
+        <li>roast meat</li>
+        <li>merge all together</li>
+        <li>eat</li>
+    </ol>
 </body>
 </html>
