--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <a href="./recipes/lasagna.html">Lasagna</a>
+    <a href="./recipes/schnitzel.html">Schnitzel</a>
+    <a href="./recipes/spaghetti.html">Spaghetti</a>
 </body>
 </html>
